--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>My First Website</title>
+        <meta charset="UTF-8">
+        <title>My First Website!</title>
     </head>
-
     <body>
-        My First Website
+        <h1>My First Website!</h1>
     </body>
 </html>
